# f5tts

./: .gitignore  Makefile  README.md  pyproject.toml
src/: voice_clone.py
